--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -49,7 +49,6 @@ a:hover{color: rgb(245 178 168);}
   h2{font-size:30px;}
   p{font-size:25px}
   #parent{
-    display: flex;
-    align-content: space-around;
+    display: block;
   }
 }
