--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,13 +1,13 @@
+html{font-size: 125%;}
 body{
   font-family: "Aria","Meiryo",sans-serif;
 }
-#parent{
+#profile{
   text-align: center;
   height: 300px;
   align-content: space-between;
-  font-size: 20px;
 }
-.child{
+#parent>p{
   font-weight: bold;
 }
 .pink{
@@ -24,7 +24,7 @@ body{
 }
 h1{
   font-family: "JosefinSans",sans-serif;
-  font-size: 2.0em;
+  font-size: 2.0rem;
   letter-spacing: 1.2em;
   text-shadow: 2px 2px 1px gray;
   border-bottom:solid 3px rgb(115 115 114);
